--- a/.github/workflows/find_list_sources.yaml
+++ b/.github/workflows/find_list_sources.yaml
@@ -29,7 +29,7 @@ jobs:
         run: brew install xquartz --cask
 
       - name: Install packages
-        run: Rscript -e '#install.packages(c("tidyverse", "tesseract", "magick", "here", "lubridate", "ggrepel"))'
+        run: Rscript -e 'install.packages(c("tidyverse", "here"))'
 
       - name: Get data
         run: Rscript -e 'source(here::here("data-raw", "find_list_sources.R"), echo = TRUE)'
